# subterfuge-game

./: CMakeLists.txt  LICENSE  game_ai.gdextension  mini_codes_equations  subterfugeFileStructure.txt
example_mod/: actions.json  buildings.json  buildings.toml  buildings.xml  buildings.yaml  manifest.json  systems.json
mods/: MyCustomMod.cs
mods/exampleMod/: CustomTraits.cs  IMod.cs  mod_info.json
references/web_visualizations/: ActivityFlow.tsx  AdvancedVisualization.cs  CreativityWeb.tsx  DataChart.tsx  EnhancedSupplyChainGraph.tsx  InnovationPipeline.tsx  KnowledgeAtlas.tsx  LearningJourney.tsx  NetworkGraph.tsx  ResearchExplorer.tsx  Scene3D.tsx  SkillTree.tsx  SupplyChainGraph.tsx
src/: BackgroundProcessor.cs  DialogueManager.cs  DisplayNode.cs  GodotManager.cs  IUpdatable.cs  MainGame.cs  NPC.cs  NodeStats.cs  Quest.cs  README.md  Reputation.cs  TechSavvyTrait.cs  TechnologySystem.cs  TimeSystem.cs  o1miniInstructions.cs  register_types.cpp  register_types.hpp
src/AI/: AIController.cpp  AIController.cs  AIController.hpp  AISystem.cs  BackgroundProcessor.cs  NPCController.cpp  NPCController.hpp  register_types.cpp
src/Buildings/: Building.cs  Upgrade.cs
src/Characters/: BiologicalTraits.hpp  Character.cs  ConflictResolutionSystem.hpp  CulturalIdentity.hpp  DialogueManager.cs  ExampleDialogue.cs  NPC.cs  SpeciesIdentity.hpp  SyncreticPracticeGenerator.hpp
src/Core/: Entity.cpp  Entity.cs  Entity.hpp  GameState.cpp  GameState.cs  GameState.hpp  NameDatabase.cpp  NameDatabase.cs  NameDatabase.hpp
src/Data/: DataManager.cs  (+9 more)
tests/: DataPipelineTests.cs
(+313 files in other folders)
